# sport

./: .gitignore  Makefile  west.yml
app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
app/boards/: esp32c3_supermini.overlay  sltb004a.overlay
app/include/: ble.h
app/src/: ble.c  main.c
services/ble/include/: ble.h
services/ble/src/: ble.c
services/sensor_service/: kconfig
services/sensor_service/include/: sensor_service.h
services/sensor_service/src/: sensor_service.c
simulator/: CMakeLists.txt  Kconfig  prj.conf
simulator/src/: main.c
